tests/NormalTests/paczka1/small_fuzzy/52816391.err
Error in line 5: d9rAGg S982 69,6
Error in line 9: sUN S982 138,78
